--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="cs.html">CS:GO</a>
-        <a class="dropdown-item" href="steam.html">STEAM</a>
+        <a class="dropdown-item" href="steam1.html">STEAM</a>
 		<a class="dropdown-item" href="https://steamcommunity.com/profiles/76561198198550706/" target="_blank">STEAM profile</a>
 		<a class="dropdown-item" href="https://www.twitch.tv/nepr0stoy" target="_blank">Twitch profile</a>
         
